--- a/css/style.css
+++ b/css/style.css
@@ -118,10 +118,8 @@ a {
 /*HERO SECTION*/
 
 .hero-section {
-  background: linear-gradient(
-      rgba(255, 255, 255, 0.2),
-      rgba(255, 255, 255, 0.2)
-    ),
+  background: linear-gradient(rgba(255, 255, 255, 0.2),
+      rgba(255, 255, 255, 0.2)),
     url('/images/ableton-hero-img.jpg');
   background-size: cover;
   background-position: center;
@@ -145,6 +143,7 @@ a {
   display: flex;
   justify-content: center;
 }
+
 /*TEXT AREA - HOPEFULLY WE CAN REUSE THESE FOR FUTURE TEXT AREAS*/
 
 .text-container {
@@ -166,4 +165,84 @@ a {
 .text-small {
   width: 105%;
   font-weight: 400;
+}
+
+/* Footer Layout */
+
+.footer {
+  height: auto;
+  margin: 0 7rem;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  grid-template-columns: 1fr 1fr 2fr;
+  gap: 2rem;
+  grid-template-areas: "logo . . ."
+    "register education signUp signUp"
+    "community language . ."
+    "linkList linkList . signature";
+}
+
+#logo {
+  grid-area: logo;
+
+}
+
+#register {
+  grid-area: register;
+}
+
+#education {
+  grid-area: education;
+
+}
+
+#signUp {
+  grid-area: signUp;
+}
+
+#community {
+  grid-area: community;
+}
+
+#language {
+  grid-area: language;
+}
+
+#linkList {
+  grid-area: linkList;
+  font-size: 0.75rem;
+
+}
+
+#linkList a {
+  padding-right: 1rem;
+}
+
+#signature {
+  grid-area: signature;
+}
+
+.footer ul {
+  padding: 0;
+  margin-top: 0;
+}
+
+.footer li,
+.footer p {
+  font-weight: 400;
+}
+
+/* .footer div {
+  padding: 0 3rem;
+} */
+
+#footerHeading {
+  font-size: 3rem;
+  font-weight: 500;
+}
+
+.footer h4 {
+  font-weight: 600;
+  margin: 0;
+
 }
